accepted to NeurIPS

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                             <span class="author-block"><sup>3</sup>Cornell University</span>
                         </div>
 
+                        <div class="is-size-4 publication-venue">
+                            <strong>NeurIPS 2025</strong>
+                        </div>
+
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <span class="link-block">
@@ -300,14 +304,11 @@
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title is-3">BibTeX</h2>
-            <pre class="bibtex-code"><code>@misc{alper2025wildcat3d,
+            <pre class="bibtex-code"><code>@InProceedings{alper2025wildcat3d,
   title={WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild},
   author={Alper, Morris and Novotny, David and Kokkinos, Filippos and Averbuch-Elor, Hadar and Monnier, Tom},
-  year={2025},
-  eprint={2506.13030},
-  archivePrefix={arXiv},
-  primaryClass={cs.CV},
-  url={https://arxiv.org/abs/2506.13030},
+  booktitle={Proceedings of Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2025}
 }</code></pre>
         </div>
     </section>
